--- a/.env
+++ b/.env
@@ -1,20 +1,20 @@
 # Telegram Bot Token
-BOT_TOKEN=your_bot_token_here
+BOT_TOKEN=8039796153:AAH6tosBa2d5Uc-lQDtgQA6Hd96APhdnXj4
 
 # MongoDB Connection URI (use MongoDB Atlas or local MongoDB)
-MONGO_URL=mongodb+srv://username:password@cluster.mongodb.net/filestore?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://6ijziglmyz:EdlupMESij8BXWh5@cluster0.lv5i1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # Admins - Comma-separated Telegram user IDs
-ADMINS=123456789,987654321
+ADMINS=7057341064
 
 # Force Subscription Channel IDs (Use negative IDs for public/private channels)
-CHANNELS=-1001234567890,-1009876543210
+CHANNELS=-1002403161861,-1002090913537
 
 # Use shortener (True or False)
 USE_SHORTENER=False
 
 # Webhook URL for deployment (set only if using webhooks)
-WEBHOOK_URL=https://yourdomain.com/webhook
+WEBHOOK_URL=https://filestore-new.onrender.com
 
 # Port (used only in webhook mode or Docker)
 PORT=8080
