--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-aiogram==2.25.1           # Telegram bot framework
-motor==3.3.1              # Async MongoDB client
-python-dotenv==1.0.1      # Load env vars from .env
-pymongo==4.7.2            # Needed if you do non-async Mongo ops (optional)
-
-aiohttp==3.9.5            # For link shortener APIs or external HTTP calls (optional)
-apscheduler==3.10.4       # For file deletion scheduler / timers (optional)
+aiogram==2.25.1
+aiohttp==3.8.6
+motor==3.3.1
+dnspython==2.4.2
+pymongo==4.6.3
+python-dotenv==1.0.1
