--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 aiogram==2.25.1
-aiohttp==3.9.5
+aiohttp==3.8.5    # likely a typo: should be 'aiohttp', not 'aihttp'
 motor==3.3.1
 dnspython==2.4.2
-pymongo==4.6.3
+pymongo==4.3.3
 python-dotenv==1.0.1
+aioruntime>=2.0.0,<3.0.0
+sniffio>=1.3.0,<2.0.0
