--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiogram==2.25.1
-aiohttp==3.8.5    # likely a typo: should be 'aiohttp', not 'aihttp'
+aiohttp==3.8.5
 motor==3.3.1
 dnspython==2.4.2
 pymongo==4.3.3
