--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-aiogram==2.25.1
+aioram==2.25.1
 aiohttp==3.8.5
 motor==3.3.1
 dnspython==2.4.2
 pymongo==4.3.3
 python-dotenv==1.0.1
-aioruntime>=3.0.0
-sniffio>=2.0.0
+sniffio>=1.3.0
